<resources>
    <string name="app_name">BrickBlast</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="click_to_register">Click To Register</string>
    <string name="register">register</string>
    <string name="click_to_login">Click To Login</string>
    <string name="user_details">User details</string>
    <string name="remember_me">Remember me</string>
    <string name="nickname">nickname</string>
    <string name="logout">Logout</string>
    <string name="start_play">START PLAY</string>
</resources>