<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/user_details"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/startPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:text="@string/start_play"
        android:textSize="60sp"
        android:textColor="@color/common_google_signin_btn_text_light_disabled"
        android:textStyle="bold"
        android:fontFamily="serif"
        />

    <Button
        android:id="@+id/btnLogout"
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "100dp"
        />

</LinearLayout>